# probable-spork-r

./: Cargo.toml  notes.org  notes.txt
script_gen_macro/: Cargo.toml
script_gen_macro/src/: lib.rs  script_component_updater.rs
src/: camera.rs  camera_controller.rs  editor.rs  engine.rs  errors.rs  main.rs  mesh.rs  old_main.rs  scene.rs  script.rs  shader.rs  test_tree.rs  texture.rs  vertex.rs
src/assets/: mod.rs
src/assets/scripts/: mod.rs  test_script.rs
src/editor/: .editor.rs.rustfmt  editor.rs  editor_event.rs  mod.rs
src/entities/: base_entity.rs  camera.rs  camera_controller.rs  mod.rs
src/entities/components/: mesh_instance.rs  mesh_renderer.rs  mod.rs  transform.rs
src/renderer/: editor.rs  editor_renderer.rs  main_renderer.rs  mesh.rs  mesh_manager.rs  mod.rs  renderer.rs  transform_instance.rs
src/shaders/: basic_shader.wgsl
src/world/: scene.rs
