[package]
name = "probable-spork-r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
pollster = "0.2"
wgpu = "0.15"
bytemuck = {version = "1.13.0", features = ["derive"]}
anyhow = "1.0"
cgmath = "0.18"
egui = "0.21.0"
egui-wgpu = {version = "0.21.0", features = ["winit"]}
egui-winit = "0.21.0"

[dependencies.image]
version = "0.24.5"
default-features = false
features = ["png", "jpeg"]